# serializer version: 1
# name: test_makemigrations_emits_renamefield_for_manual_rename
  '''
  
  from typing import ClassVar
  from tortoisemarch.base import BaseMigration
  from tortoisemarch.operations import RenameField
  
  
  class Migration(BaseMigration):
      """Auto-generated migration."""
  
      operations: ClassVar[list] = [
          RenameField(
              model_name="Book", db_table="book", old_name="title", new_name="name"
          ),
      ]
  
  '''
# ---
# name: test_makemigrations_emits_renamefield_for_manual_rename.1
  '''
  
  from typing import ClassVar
  from tortoisemarch.base import BaseMigration
  from tortoisemarch.operations import AddField, RemoveField
  
  
  class Migration(BaseMigration):
      """Auto-generated migration."""
  
      operations: ClassVar[list] = [
          RemoveField(model_name="Book", db_table="book", field_name="name"),
          AddField(
              model_name="Book",
              db_table="book",
              field_name="another_field",
              field_type="CharField",
              options={"default": "", "max_length": 200},
          ),
      ]
  
  '''
# ---
# name: test_makemigrations_emits_renamemodel_for_model_rename
  '''
  
  from typing import ClassVar
  from tortoisemarch.base import BaseMigration
  from tortoisemarch.operations import AlterField, RenameModel
  
  
  class Migration(BaseMigration):
      """Auto-generated migration."""
  
      operations: ClassVar[list] = [
          RenameModel(
              old_name="Author",
              new_name="Writer",
              old_db_table="author",
              new_db_table="writer",
          ),
          AlterField(
              model_name="Book",
              db_table="book",
              field_name="author",
              old_options={
                  "related_model": "models.Author",
                  "related_table": "author",
                  "type": "ForeignKeyFieldInstance",
              },
              new_options={
                  "related_model": "models.Writer",
                  "related_table": "writer",
                  "type": "ForeignKeyFieldInstance",
              },
          ),
      ]
  
  '''
# ---
# name: test_makemigrations_integration
  '''
  
  from typing import ClassVar
  from tortoisemarch.base import BaseMigration
  from tortoisemarch.operations import CreateModel
  
  
  class Migration(BaseMigration):
      """Auto-generated migration."""
  
      operations: ClassVar[list] = [
          CreateModel(
              name="Book",
              db_table="book",
              fields=[
                  (
                      "id",
                      "UUIDField",
                      {
                          "default": "callable",
                          "unique": True,
                          "index": True,
                          "primary_key": True,
                      },
                  ),
                  ("title", "CharField", {"max_length": 100}),
              ],
          ),
      ]
  
  '''
# ---
# name: test_makemigrations_integration.1
  '''
  
  from typing import ClassVar
  from tortoisemarch.base import BaseMigration
  from tortoisemarch.operations import CreateModel
  
  
  class Migration(BaseMigration):
      """Auto-generated migration."""
  
      operations: ClassVar[list] = [
          CreateModel(
              name="Author",
              db_table="author",
              fields=[
                  (
                      "id",
                      "IntField",
                      {"unique": True, "index": True, "primary_key": True},
                  ),
                  ("name", "CharField", {"max_length": 100}),
              ],
          ),
      ]
  
  '''
# ---
# name: test_makemigrations_integration.2
  '''
  
  from typing import ClassVar
  from tortoisemarch.base import BaseMigration
  from tortoisemarch.operations import AddField
  
  
  class Migration(BaseMigration):
      """Auto-generated migration."""
  
      operations: ClassVar[list] = [
          AddField(
              model_name="Author",
              db_table="author",
              field_name="active",
              field_type="BooleanField",
              options={"default": True},
          ),
      ]
  
  '''
# ---
